# labs_oop

./: .gitignore  CMakeLists.txt  main.cpp  npcs.txt
bracketsTest/: CMakeLists.txt  bracketsTest.vcxproj  pch.h  test.cpp
include/: AttackVisitor.h  AttackVisitorable.h  BaseFigure.h  BattleCreater.h  BattleMaster.h  Bear.h  ConsoleObserver.h  ConstForwardIterator.h  FigureValidator.h  FileObserver.h  ForwardIterator.h  IFigureValidator.h  INumerable.h  IObserver.h  NPC.h  NPCfactory.h  Observable.h  Orc.h  Paralellogram.h  ParalellogramValidator.h  Point.h  Rectangle.h  RectangleValidator.h  Rhomb.h  RhombValidator.h  Squirrel.h  Trapezoid.h  TrapezoidValidator.h  Vector.h  allocator.h  octal.h  unidirectionalList.h  vector.h
src/: AttackVisitor.cpp  AttcakVisitorable.cpp  BaseFigure.cpp  BattleCreater.cpp  BattleMaster.cpp  Bear.cpp  BracketRow.cpp  BracketRow.h  CMakeLists.txt  ConsoleObserver.cpp  ConstForwardIterator.cpp  FigureValidator.cpp  FileObserver.cpp  ForwardIterator.cpp  ICountable.h  IObserver.cpp  NPC.cpp  NPCfactory.cpp  Observable.cpp  Orc.cpp  Paralellogram.cpp  ParalellogramValidator.cpp  Point.cpp  Rectangle.cpp  RectangleValidator.cpp  Rhomb.cpp  RhombValidator.cpp  Squirrel.cpp  Trapezoid.cpp  TrapezoidValidator.cpp  allocator.cpp  bracket_row.cpp  bracket_row.h  brackets.cpp  brackets.h  octal.cpp  octal.h  unidirectionalList.cpp  vector.cpp
test/: CMakeLists.txt  RectangleTest.cpp  RhombTest.cpp  TrapezoidTest.cpp  factoryTest.cpp  observerTest.cpp  test.cpp
test/bracket_test/: CMakeLists.txt  OrderBracketsTest.cpp  testOrderTheBrackets.cpp
(+11 files in other folders)
